# Picrete

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: Dockerfile  docker-compose.prod.yml  main.py  nginx-config-example.conf  requirements.txt  setup-nginx.sh  start_beat.sh  start_worker.sh
backend/app/: __init__.py
backend/migrations/: 001_remove_email.sql  002_add_ai_logging_fields.sql  003_add_privacy_and_consent_fields.sql
migrations/: 001_init.sql  20250101000000_initial_schema.sql  20260207001000_add_query_indexes.sql  20260207002000_enforce_single_active_session.sql  20260207003000_fix_difficultylevel_enum.sql  20260207004000_fix_remaining_enums_lowercase.sql  20260207005000_convert_existing_enum_data_to_lowercase.sql  20260207006000_fix_exam_delete_cascade.sql  20260207007000_fix_exam_sessions_delete_cascade.sql  20260207008000_fix_task_variants_delete_cascade.sql  20260207009000_fix_auto_save_data_null.sql  20260211181000_submission_images_upload_source.sql  20260211181100_telegram_user_links.sql  20260211181200_telegram_selected_sessions.sql  20260211201000_telegram_bot_offsets.sql  20260712010000_course_ai_assistants.sql  20260712020000_course_task_bank_sources.sql
scripts/: shadow_requests.json
src/: App.tsx  index.css  lib.rs  main.rs  prelude.rs  test_support.rs  vite-env.d.ts
src/api/: assistant.rs  auth.rs  courses.rs  errors.rs  exams.rs  guards.rs  handlers.rs  mod.rs  pagination.rs  (+4 more)
tests/: migrations_smoke.rs
(+168 files in other folders)
